[CMake] Add a variable to control macro __PAS_ALWAYS_INLINE_BUT_NOT_INLINE https://bugs.webkit.org/show_bug.cgi?id=260065

Reviewed by NOBODY (OOPS!).

It fails to compile webkitgtk with option `-Og` of gcc/g++:

| In file included from Source/bmalloc/libpas/src/libpas/pas_heap_page_provider.h:30,
|                  from Source/bmalloc/libpas/src/libpas/pas_bootstrap_heap_page_provider.h:29,
|                  from Source/bmalloc/libpas/src/libpas/pas_large_heap_physical_page_sharing_cache.h:29,
|                  from Source/bmalloc/libpas/src/libpas/pas_basic_heap_page_caches.h:29,
|                  from Source/bmalloc/libpas/src/libpas/pas_heap_config_utils.h:32,
|                  from Source/bmalloc/libpas/src/libpas/bmalloc_heap_config.h:34,
|                  from Source/bmalloc/libpas/src/libpas/bmalloc_heap_inlines.h:34,
|                  from Source/bmalloc/bmalloc/bmalloc.h:39,
|                  from Source/bmalloc/bmalloc/bmalloc.cpp:26:
| In function 'pas_allocation_result pas_local_allocator_try_allocate(pas_local_allocator*, size_t, size_t, pas_heap_config, pas_allocator_counts*, pas_allocation_result_filter)',
|     inlined from 'pas_allocation_result pas_try_allocate_common_impl_fast(pas_heap_config, pas_allocator_counts*, pas_allocation_result_filter, pas_local_allocator*, size_t, size_t)' at webkitgtk-2.40.2/Source/bmalloc/libpas/src/libpas/pas_try_allocate_common.h:85:46,
|     inlined from 'pas_allocation_result bmalloc_try_allocate_with_alignment_impl_impl_fast(pas_local_allocator*, size_t, size_t)' at webkitgtk-2.40.2/Source/bmalloc/libpas/src/libpas/bmalloc_heap_inlines.h:59:1,
|     inlined from 'pas_allocation_result pas_try_allocate_intrinsic_impl_casual_case(__pas_heap*, size_t, size_t, pas_intrinsic_heap_support*, pas_heap_config, pas_try_allocate_common_fast, pas_try_allocate_common_slow, pas_intrinsic_heap_designation_mode)' at webkitgtk-2.40.2/Source/bmalloc/libpas/src/libpas/pas_try_allocate_intrinsic.h:167:44,
|     inlined from 'pas_allocation_result bmalloc_try_allocate_with_alignment_impl_casual_case(size_t, size_t)' at webkitgtk-2.40.2/Source/bmalloc/libpas/src/libpas/bmalloc_heap_inlines.h:59:1:
| webkitgtk-2.40.2/Source/bmalloc/libpas/src/libpas/pas_allocation_result.h:76:1: error: inlining failed in call to 'always_inline' 'pas_allocation_result pas_allocation_result_identity(pas_allocation_result)': function not considered for inlining
|    76 | pas_allocation_result_identity(pas_allocation_result result)
|       | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Add an variable `WEBKIT_NO_INLINE_HINTS` to control macro
__PAS_ALWAYS_INLINE_BUT_NOT_INLINE whether includes function attribute
`always_inline`. It could set the variable to make compilation pass when
gcc option `-Og` is used.

* Source/bmalloc/libpas/src/libpas/pas_utils_prefix.h:
* Source/cmake/WebKitCompilerFlags.cmake:

Signed-off-by: Kai Kang <kai.kang@windriver.com>